--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <span class="px-3 py-1 rounded-full text-xs bg-[#D1413F]/5 text-[#D1413F] border border-[#D1413F]/20 font-bold uppercase tracking-wider">個人賽</span>
                     </div>
                     <h3 class="text-xl font-bold text-[#3D2B2B] mb-2">個人榮耀賽 & 午餐老闆請客！</h3>
-                    <p class="text-[#3D2B2B]/60 leading-relaxed mb-4 text-sm">Switch 熱血對戰！按名次獲取 1-3 積分，若名次贏過老闆加碼 +1 分！最後一名抽懲罰。</p>
+                    <p class="text-[#3D2B2B]/60 leading-relaxed mb-4 text-sm">Switch 熱血對戰！按名次獲取積分，輸家懲罰！ *依現場狀況可能新增其他對戰團康</p>
                     <a href="https://maps.app.goo.gl/6dDLwArqF7uKExWS6" target="_blank" class="inline-flex items-start gap-2 p-3 rounded-xl bg-[#FDF6E9]/50 border border-[#C5A059]/10 hover:bg-white hover:border-[#D1413F]/30 transition-all">
                         <i data-lucide="map-pin" class="w-4 h-4 text-[#D1413F] mt-0.5"></i>
                         <div class="text-xs">
@@ -188,7 +188,7 @@
                         <span class="px-3 py-1 rounded-full text-xs bg-[#D1413F]/5 text-[#D1413F] border border-[#D1413F]/20 font-bold uppercase tracking-wider">團體賽</span>
                     </div>
                     <h3 class="text-xl font-bold text-[#3D2B2B] mb-2">閃動格子：團隊巔峰戰</h3>
-                    <p class="text-[#3D2B2B]/60 leading-relaxed mb-4 text-sm">體力與反應的極限考驗！分組對戰制。贏組全員 +2 積分，輸組全員 +1 積分但需面臨神祕懲罰。</p>
+                    <p class="text-[#3D2B2B]/60 leading-relaxed mb-4 text-sm">辦公室坐太久了起來動一動吧(?)體力與反應的極限考驗！分組對戰制。</p>
                     <a href="https://maps.app.goo.gl/UPAvbYtb3KuZwwbv9" target="_blank" class="inline-flex items-start gap-2 p-3 rounded-xl bg-[#FDF6E9]/50 border border-[#C5A059]/10 hover:bg-white hover:border-[#D1413F]/30 transition-all">
                         <i data-lucide="map-pin" class="w-4 h-4 text-[#D1413F] mt-0.5"></i>
                         <div class="text-xs">
@@ -209,7 +209,7 @@
                         <span class="px-3 py-1 rounded-full text-xs bg-[#D1413F]/5 text-[#D1413F] border border-[#D1413F]/20 font-bold uppercase tracking-wider">晚宴</span>
                     </div>
                     <h3 class="text-xl font-bold text-[#3D2B2B] mb-2">今晚吃雞 & 頒獎典禮</h3>
-                    <p class="text-[#3D2B2B]/60 leading-relaxed mb-4 text-sm">大口吃肉！統計全日積分，揭曉年度 MVP 並頒發重磅獎項。</p>
+                    <p class="text-[#3D2B2B]/60 leading-relaxed mb-4 text-sm">大口吃肉！統計全日積分，揭曉排名並頒發獎項。</p>
                     <div class="flex flex-wrap gap-2">
                         <a href="https://maps.app.goo.gl/Ex3xymBxXQooiELT9" target="_blank" class="inline-flex items-start gap-2 p-3 rounded-xl bg-[#FDF6E9]/50 border border-[#C5A059]/10 hover:bg-white hover:border-[#D1413F]/30 transition-all">
                             <i data-lucide="map-pin" class="w-4 h-4 text-[#D1413F] mt-0.5"></i>
