--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
             </div>
             
             <p class="text-lg text-[#3D2B2B]/70 mb-10 max-w-2xl mx-auto leading-relaxed font-medium">
-                這不只是一場聚餐，更是一場關於實力與運氣的巔峰對決。<br>
+                這不只是一場聚餐，<br>
+                更是一場關於實力與運氣的巔峰對決。<br>
                 積分最高的挑戰者，將贏得新歲最厚紅包！
             </p>
 
